--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title data-translate="title">Lest Coast Tattoo Studio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 </head>
 <body>
-    <header>
+    <header class="sticky">
         <div class="logo">
             <h1 data-translate="title">Lest Coast Tattoo Studio</h1>
         </div>
@@ -73,5 +74,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 </body>
 </html>
