--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-translate="title">Lest Coast Tattoo Studio</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Rockwell&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 </head>
 <body>
-    <header class="sticky">
+    <header class="shop-sign">
         <div class="logo">
             <h1 data-translate="title">Lest Coast Tattoo Studio</h1>
         </div>
@@ -34,7 +34,7 @@
         </nav>
     </header>
 
-    <section id="home">
+    <section id="home" class="flash-sheet">
         <div class="hero">
             <h2 data-translate="hero_title">Old School Ink, Lest Coast Stijl</h2>
             <p data-translate="hero_text">Ontdek de kunst van klassieke tattoos bij Lest Coast Tattoo Studio.</p>
@@ -42,17 +42,17 @@
         </div>
     </section>
 
-    <section id="portfolio">
+    <section id="portfolio" class="flash-sheet">
         <h2 data-translate="portfolio_title">Portfolio</h2>
         <div class="gallery" id="portfolio-gallery"></div>
     </section>
 
-    <section id="about">
+    <section id="about" class="flash-sheet">
         <h2 data-translate="about_title">Over Lest Coast</h2>
         <p data-translate="about_text">Maak kennis met [Naam Artiest], de drijvende kracht achter Lest Coast Tattoo Studio. Met een passie voor old-school designs en jarenlange ervaring brengen we klassieke kunst tot leven met een unieke twist.</p>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="flash-sheet">
         <h2 data-translate="contact_title">Contact</h2>
         <form id="contact-form">
             <label for="name" data-translate="contact_name">Naam:</label>
@@ -65,7 +65,7 @@
         </form>
     </section>
 
-    <footer>
+    <footer class="shop-sign">
         <p data-translate="footer">&copy; 2025 Lest Coast Tattoo Studio. Alle rechten voorbehouden.</p>
         <div class="social-links">
             <a href="https://instagram.com/lestcoasttattoostudio" target="_blank"><img src="assets/instagram-icon.png" alt="Instagram"></a>
